# pyExaMINE

./: .dockerignore  .gitignore  Containerfile.podman-mpi  Dockerfile  Dockerfile.us-policy  INSTALL.md  PERLMUTTER_USPOLICY.md  README.md  USGS_CMM.csv  pyproject.toml  requirements.txt  run_simulation.py
data/: cobalt_consumers.csv  cobalt_manufacturers.csv  cobalt_mines.csv  cobalt_processors.csv  cobalt_recyclers.csv  country_gdp.csv  demand.csv  lithium_consumers.csv  lithium_manufacturers.csv  lithium_mines.csv  lithium_processors.csv  lithium_recyclers.csv  manganese_consumers.csv  manganese_manufacturers.csv  manganese_mines.csv  manganese_processors.csv  manganese_recyclers.csv  nickel_consumers.csv  nickel_manufacturers.csv  nickel_mines.csv  nickel_processors.csv  nickel_recyclers.csv  platinum_consumers.csv  platinum_manufacturers.csv  platinum_mines.csv  platinum_processors.csv  platinum_recyclers.csv  transport_fleet.csv
outputs/: lithium_model_data.csv  lithium_summary_stats.txt  nickel_model_data.csv  nickel_summary_stats.txt  platinum_model_data.csv  platinum_summary_stats.txt
plans/: architecture_plan.md  implementation_roadmap.md  quick_reference.md
policies/: us_aggressive.json  us_default.json  us_ira.json  us_strategic_reserve.json
scenarios/: sweep_bufix_param_grid.json  sweep_stage2_param_grid.json  sweep_stage2v2_param_grid.json  sweep_stage3_param_grid.json
scripts/: build_dataset.py  build_policy_scenarios.py  compact_csvs_to_hdf5.py  compact_only.slurm  evaluate_trajectory.py  perlmutter_build_train.slurm  perlmutter_ensemble.slurm  (+26 more)
(+120 files in other folders)
